--- a/goldmark/package.json
+++ b/goldmark/package.json
@@ -19,6 +19,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
