--- a/goldmark-backend/.env
+++ b/goldmark-backend/.env
@@ -19,3 +19,5 @@ STRIPE_WEBHOOK_SECRET=
 
 DEFAULT_ADMIN_EMAIL=admin@goldmark.com
 DEFAULT_ADMIN_PASSWORD=goldmark123
+
+REACT_APP_API_URL=http://localhost:5000/api
