--- a/goldmark-backend/package.json
+++ b/goldmark-backend/package.json
@@ -14,19 +14,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "pg": "^8.12.0",
+    "@supabase/supabase-js": "^2.57.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.4.0",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "stripe": "^16.12.0",
     "nodemailer": "^6.9.15",
-    "uuid": "^10.0.0"
+    "pg": "^8.12.0",
+    "stripe": "^16.12.0",
+    "uuid": "^10.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
