--- a/goldmark/package.json
+++ b/goldmark/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@stripe/react-stripe-js": "^3.9.0",
     "@stripe/stripe-js": "^7.8.0",
+    "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "lucide-react": "^0.537.0",
@@ -23,7 +24,7 @@
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.17",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
