--- a/goldmark-backend/package.json
+++ b/goldmark-backend/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
